tests/NormalTests/paczka1/small_fuzzy/23858836.err
Error in line 5: 6erC A756 85,1
Error in line 8: 6erC A361 60,9
Error in line 12: A361 A756 79,8
